--- a/index.html
+++ b/index.html
@@ -58,18 +58,19 @@
       </nav> <!-- end #nav-wrap -->
 
       <div class="row banner">
-        <div class="three columns">
 
-           <img class="circular"  src="images/ja.jpg" alt="" />
-
+        <div class="">
+           <img class="circular"  src="images/wyciety2.png" alt="Moje zdjęcie" />
         </div>
+
          <div class="banner-text">
-            <h1 class="responsive-headline">Cześć! Tworzę bo lubię.</h1>
-            <h3>Czy <span>programista</span> jest <span>stwórcą</span>?   Niewiem, może. Ja i tak dobię tworzę :D.  <a class="smoothscroll" href="#about">Przewiń dalej</a>
+            <h1 class="responsive-headline">Cześć, Jestem Adam!</h1>
+            <h2>Tworzę bo lubię.</h2>
+            <h3>Czy <span>programista</span> jest <span>stwórcą</span>?   Niewiem - może? Ja i tak sobię tworzę :D.  <a class="smoothscroll" href="#about">Przewiń dalej</a>
             aby dowiedzieć się więcej <a class="smoothscroll" href="#about">o Mnie.</a>.</h3>
             <hr />
-
          </div>
+
       </div>
 
       <p class="scrolldown">
