--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Strona domowa</a></li>
-            <li><a class="smoothscroll" href="#about">About</a></li>
+            <li><a class="smoothscroll" href="#about">O to Ja</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
@@ -94,23 +94,26 @@
 
          <div class="nine columns main-col">
 
-            <h2>About Me</h2>
+            <h2>O to Ja</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>Po pierwsze - Programista pasjonat.<br>
+              Po drógie - Robotyka, Automatyka, Elektronika, Przejmowanie kontroli nad światem.<br>
+              Po trzecie - Paralotniarstwo, Off Road, Taplanie się w błocie.<br>
+              <br>
+              <br>
+              Zawód elektryk, jak Wałęsa. Z zamiłowania Programista jak Ja.
+              Przygodę z kodem zacząłem jako dziecko. Pamiętasz Turbo Paskala.
+              Heeee to były czasy. Obecnie piszę w C/C++, JS, html, css,
+              a jak przyjdzie potrzeba to i w pozostałych coś wyskrobię:D.
             </p>
 
             <div class="row">
 
                <div class="columns contact-details">
 
-                  <h2>Contact Details</h2>
+                  <h2>Dane kontaktowe</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
+						   <span>Adam Białachowski</span><br>
 						   <span>1600 Amphitheatre Parkway<br>
 						         Mountain View, CA 94043 US
                      </span><br>
