dodanie nr tel i emaila po kliknięcu

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
    <!-- Script
    ================================================== -->
 	<script src="js/modernizr.js"></script>
+  <script src="js/script.js"></script>
 
    <!-- Favicons
 	================================================== -->
@@ -97,8 +98,8 @@
             <h2>O to Ja</h2>
 
             <p>Po pierwsze - Programista pasjonat.<br>
-              Po drógie - Robotyka, Automatyka, Elektronika, Przejmowanie kontroli nad światem.<br>
-              Po trzecie - Paralotniarstwo, Off Road, Taplanie się w błocie.<br>
+              Po drugie - Robotyka, Automatyka, Elektronika, Przejmowanie kontroli nad światem.<br>
+              Po trzecie - paralotniarstwo, off road, taplanie się w błocie.<br>
               <br>
               <br>
               Zawód elektryk, jak Wałęsa. Z zamiłowania Programista jak Ja.
@@ -114,11 +115,9 @@
                   <h2>Dane kontaktowe</h2>
                   <p class="address">
 						   <span>Adam Białachowski</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						     <span id="nrTel" onclick="showNrTel();">+48 kliknij aby wyświetlić</span>
+               <br>
+                 <span id="eMail" onclick="showEMail();">kliknij aby zobaczyć@gmal.com</span>
 					   </p>
 
                </div>
